[package]
name = "ruxpin_kernel"
version = "0.1.0"
authors = ["transistor <trans@jabberwocky.ca>"]
edition = "2021"

[features]
arch-aarch64 = []

[dependencies]
ruxpin_types = { path = "../lib/types" }
ruxpin_syscall = { path = "../lib/syscall" }
ruxpin_syscall_proc = { path = "../lib/syscall_proc" }

